Fixed overflow in chrome.

--- a/themes.css
+++ b/themes.css
@@ -1,5 +1,5 @@
 *{
-  font-size: 1.5vw;
+  font-size: 1.3vw;
 }
 html{
   width: 100vw;
@@ -14,7 +14,7 @@ body{
 }
 .root{
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: auto auto;
   grid-template-rows: auto auto;
   width: calc(100% - 20px);
   height: calc(100% - 20px);
@@ -25,26 +25,19 @@ body{
   display: grid;
   overflow: auto;
   max-height: 90vh;
-  height: 45vh;
   grid-row-start: 1;
   grid-column-start: 1;
 }
 .resizebar{
   position: relative;
-  display: flex;
-  align-items: flex-end;
-  max-height: 90vh;
-  height: 45vh;
-  resize: vertical;
-  overflow: auto;
-  left: calc((100% - 17.617px)/2);
+  height: 100%;
   width: 17.617px;
-  grid-row-start: 1;
-  grid-column-start: 1;
+  overflow-y: auto;
+  grid-row: span 2;
 }
 .resizebar-inground{
-  width: 100%;
-  height: 17px;
+  width: 1px;
+  height: 1000%;
   background-color: gray;
 }
 .tagQuestionContainer{
@@ -66,7 +59,7 @@ body{
 }
 @media(max-aspect-ratio: 7/5) {
   *{
-    font-size: 3vw;
+    font-size: 2vw;
   }
   .table{
     display: grid;
@@ -114,6 +107,20 @@ body{
     max-height: 90vh;
     overflow: auto;
   }
+  .resizebar{
+    position: relative;
+    height: 100%;
+    width: 17.617px;
+    overflow-y: auto;
+    grid-row: span 2;
+  }
+  .resizebar::-webkit-scrollbar{
+    display: none;
+  }
+  .resizebar-inground{
+    width: 1px;
+    height: 1000%;
+  }
 }
 .theme{
   display: grid;
@@ -128,7 +135,7 @@ body{
   color: rgba(0, 0, 0, 0.837);
   background-color: rgb(208, 102, 208)
 }
-.mythos>.Mystery>.MysteryHeader, .logos>.Type>.TypeHeader{
+.mythos>.Mystery>.MysteryHeader{
   color: rgba(0, 0, 0, 0.837);
 }
 .TypeHeader{
@@ -159,7 +166,7 @@ body{
   outline: rgba(185, 49, 0, 0.514) dashed 1px;
 }
 .mythos>.checkAttentionFade>.Attention{
-  outline: rgb(135, 68, 135) dashed 1px;
+  outline: rgba(135, 68, 135, 1) dashed 1px;
 }
 .AttentionCheckContainer{
   display: grid;
